# BTL_MMHCS-Python

./: .gitignore  API_DOCUMENTATION.md  Bao_Cao_Do_An.md  DEPLOYMENT.md  DOUBLE_RATCHET_CORE_IMPLEMENTATION.md  README.MD  SETUP_CHECKLIST.md  SYSTEM_FLOW.md  TROUBLESHOOTING.md  USER_FLOW.md  X3DH_CORE_IMPLEMENTATION.md  dev.bat  dev.sh  package-lock.json  package.json  run_all.bat  run_all_updated.bat  start_all.bat  start_mmhcs.bat  system_flow_analysis.md
backend/: .env  .env.example  BACKEND_SRC_GUIDE.md  README.md  pyproject.toml  run_dev.sh  start.sh
backend-nodejs-backup/: .env  package-lock.json  package.json
backend/src/: server.py
backend/src/controllers/: auth_controller.py  group_controller.py  message_controller.py  secure_storage_controller.py
backend/src/emails/: email_handlers.py  email_templates.py
backend/src/lib/: cloudinary.py  config.py  crypto_client.py  db.py  resend.py  socket.py  utils.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: Group.py  KeyBundle.py  Message.py  SecureStorage.py  User.py
backend/src/routes/: auth_route.py  crypto_route.py  group_route.py  message_route.py  secure_storage_route.py
backend/tests/: test_fido_callback.py  test_mls_group_controller.py
client_login/: README.md  migrate_to_mongo.py  passkey_client.py  passkey_server.py  requirements.txt
client_login/pysignal/: Cargo.toml  pyproject.toml
client_login/pysignal/src/: lib.rs
crypto-service-backup-signal-working/: package-lock.json  package.json
frontend/: FRONTEND_SRC_GUIDE.md  README.md  build_error.txt  build_error_utf8.txt  console_out2.txt  console_out3.txt  dump.json  mls-e2e-test.cjs  package-lock.json  package.json  (+2 more)
(+48 files in other folders)
