[project]
name = "chatify-backend"
version = "1.0.0"
description = "Real-time chat application backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.5.0",
    "motor>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.6.0",
    "cloudinary>=1.35.0",
    "resend>=0.3.0",
    "python-socketio>=5.9.0",
    "python-engineio>=4.7.0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]
