[package]
name = "pysignal"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysignal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }

# Signal library (official)
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", package = "libsignal-protocol" }